# KDebugger

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/libkdebugger/: bit.hpp  breakpoint.hpp  breakpoint_site.hpp  disassembler.hpp  dwarf.hpp  elf.hpp  error.hpp  kdebugger.hpp  libkdebugger.hpp  parse.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  stack.hpp  stoppoint_collection.hpp  syscalls.hpp  target.hpp  types.hpp  watchpoint.hpp
include/libkdebugger/detail/: registers.inc
src/: CMakeLists.txt  breakpoint.cpp  breakpoint_site.cpp  disassembler.cpp  dwarf.cpp  elf.cpp  kdebugger.cpp  libkdebugger.cpp  pipe.cpp  process.cpp  registers.cpp  stack.cpp  syscalls.cpp  target.cpp  types.cpp  watchpoint.cpp
test/: CMakeLists.txt  tests.cpp
test/targets/: CMakeLists.txt  anti_debugger.cpp  libmarshmellow.cpp  main_cu_main.cpp  marshmellow.cpp  memory.cpp  multi_cu_other.cpp  multithreaded.cpp  overloaded.cpp  reg_read.s  reg_write.s  step.cpp
tools/: CMakeLists.txt  kdebugger.cpp
